--- a/index.html
+++ b/index.html
@@ -6,10 +6,26 @@
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="styles.css">
     <title>Etch-A-Sketch</title>
+   
 </head>
 <body>
     <div class="sketch-pad">
-        <div id="title"><h1>Etch-A-Sketch</h1></div>
+        <div id="title">
+        <h1>Etch-A-Sketch</h1>
+    </div>
+
+    <div class="container"></div>
+        <div class="buttons">
+            <button class="btnColor" onclick="changeColor('black')">Black</button>
+            <button class="btnColor" onclick="changeColor('gray')">Gray</button>
+            <button class="btnColor" onclick="changeColor('random')">Rainbow</button>
+            <button class="btnColor" onclick="resetContainer()">Reset</button>
+        </div>
+    <div class="pixelSize">
+        <input type="text" placeholder="1-100"
+        onchange="changeSize(this.value)">
+        <button class="resizeBtn">Resize</button>
+    </div>
     </div>
 </body>
 <script src="main.js"></script>
